--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
     "@types/classnames": "^2.3.1",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.5",
@@ -33,6 +34,7 @@
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "4.5.0",
     "husky": "4.3.0",
     "lint-staged": "10.5.1",
@@ -43,6 +45,7 @@
     "style-loader": "2.0.0",
     "ts-loader": "8.2.0",
     "typescript": "4.0.3",
+    "url-loader": "^4.1.1",
     "webpack": "4.44.2",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0",
