--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "hookrouter": "1.2.3",
+    "identity-obj-proxy": "^3.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "url": "^0.11.0"
@@ -20,6 +21,7 @@
     "@svgr/webpack": "^5.5.0",
     "@types/classnames": "^2.3.1",
     "@types/hookrouter": "^2.2.5",
+    "@types/jest": "^26.0.23",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "4.6.0",
@@ -40,12 +42,14 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "4.5.0",
     "husky": "4.3.0",
+    "jest": "^27.0.3",
     "lint-staged": "10.5.1",
     "node-sass": "4.14",
     "prettier": "2.1.2",
     "pretty-quick": "3.1.0",
     "sass-loader": "10.0.4",
     "style-loader": "2.0.0",
+    "ts-jest": "^27.0.1",
     "ts-loader": "8.2.0",
     "typescript": "4.0.3",
     "url-loader": "^4.1.1",
