--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "Nikolay Gagara <ggn.f763@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@hapi/hapi": "^20.1.3",
+    "@hapi/inert": "^6.0.3",
     "classnames": "^2.3.1",
+    "handlebars": "^4.7.7",
     "hookrouter": "1.2.3",
     "identity-obj-proxy": "^3.0.0",
+    "path": "^0.12.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "url": "^0.11.0"
@@ -56,7 +60,8 @@
     "webpack": "4.44.2",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0",
-    "webpack-merge": "5.7.3"
+    "webpack-merge": "5.7.3",
+    "webpack-node-externals": "^3.0.0"
   },
   "husky": {
     "hooks": {
